// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane R3 — the phone is unchanged (golden) deliveries add sheet (header Add), iOS 390 1`] = `
{
  "lines": 968,
  "sha256": "b0b9181de601dc5f7e705ebb743ea1ffc87490357bd2d408b952aad2b0a6258c",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, iOS 390 1`] = `
{
  "lines": 968,
  "sha256": "f6e3a456a6da8391a75654bd192949c6e3833a51e1f0597dc8f329f8addef65f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 390 1`] = `
{
  "lines": 968,
  "sha256": "f6e3a456a6da8391a75654bd192949c6e3833a51e1f0597dc8f329f8addef65f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries at rest, web 768 1`] = `
{
  "lines": 968,
  "sha256": "f6e3a456a6da8391a75654bd192949c6e3833a51e1f0597dc8f329f8addef65f",
}
`;

exports[`lane R3 — the phone is unchanged (golden) deliveries receive sheet (receive-<id>), iOS 390 1`] = `
{
  "lines": 996,
  "sha256": "460b832ae03cb8cc35db337014d6a8803aed37a3ee2ab4b26db9e7ef69066d04",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, iOS 390 1`] = `
{
  "lines": 489,
  "sha256": "35129ba9cfcb80a773f26cb29f45415b1fd1995f876297d8c250eddb86593483",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 390 1`] = `
{
  "lines": 489,
  "sha256": "35129ba9cfcb80a773f26cb29f45415b1fd1995f876297d8c250eddb86593483",
}
`;

exports[`lane R3 — the phone is unchanged (golden) documents at rest, web 768 1`] = `
{
  "lines": 489,
  "sha256": "35129ba9cfcb80a773f26cb29f45415b1fd1995f876297d8c250eddb86593483",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, iOS 390 1`] = `
{
  "lines": 613,
  "sha256": "057d5a03585695841f23d6e2cd72f8ae7a15e77ddbd332834cc4ab5792095545",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 390 1`] = `
{
  "lines": 613,
  "sha256": "057d5a03585695841f23d6e2cd72f8ae7a15e77ddbd332834cc4ab5792095545",
}
`;

exports[`lane R3 — the phone is unchanged (golden) leads at rest, web 768 1`] = `
{
  "lines": 613,
  "sha256": "057d5a03585695841f23d6e2cd72f8ae7a15e77ddbd332834cc4ab5792095545",
}
`;
